fix tab overflow bug on ie

--- a/less/navs.less
+++ b/less/navs.less
@@ -54,7 +54,7 @@
   }
 
   > .nav-content {
-    overflow-x: hidden;
+    overflow: hidden;
     > .nav {
       width: 5000px;
     }
